--- a/2a.html
+++ b/2a.html
@@ -88,8 +88,8 @@
                     <textarea name="message" id="" cols="30" rows="10"></textarea>
                 </div>
                 <div class="input">
-                    <label for="">Gender</label><span>Male</span><input type="radio" name="male"
-                        id=""><span>Female</span><input type="radio" name="female" id="">
+                    <label for="">Gender</label><span>Male</span><input type="radio" name="gender" value="male"
+                        id=""><span>Female</span><input type="radio" name="gender" value="female" id="">
                 </div>
                 <div class="input">
                     <input type="submit" value="Submit" id="submit">
