--- a/1b.html
+++ b/1b.html
@@ -188,8 +188,8 @@
 
                         </div>
                         <div>
-                                <p>Jyotiprakash Mohanta</p>
-                                <p>Reg No:1801227230</p>
+                                <p>Ashish Mohapatra</p>
+                                <p>Reg No:1801227123</p>
                         </div>
                 </center>
         </main>
