--- a/2a.html
+++ b/2a.html
@@ -94,8 +94,8 @@
                 <div class="input">
                     <input type="submit" value="Submit" id="submit">
                 </div>
-                <p style="font-size: 20px;">Name: Jyoti Prakash Mohanta</p>
-                <p style="font-size: 20px;">Reg No: 1801227230</p>
+                <p style="font-size: 20px;">Name: Ashish Mohapatra</p>
+                <p style="font-size: 20px;">Reg No: 1801227123</p>
             </form>
 
         </div>
