--- a/2b.html
+++ b/2b.html
@@ -136,9 +136,9 @@
                 <div class="line"></div>
                 <div class="footer-right">
                     <div class="footer-right-contains">
-                        <p>Name: Jyoti Praksh Mohanta</p>
-                        <p>Roll No:CS180057</p>
-                        <p>Reg No:CS180057</p>
+                        <p>Name: Ashish Mohapatra</p>
+                        <p>Roll No:CS180115</p>
+                        <p>Reg No:1801227123</p>
                     </div>
 
                 </div>
