--- a/3.html
+++ b/3.html
@@ -116,8 +116,8 @@
         </div>
     </div>
     <div>
-        <h2>Name: Jyoti Prakash Mohanta</h2>
-        <h2>Reg No: 1801227230</h2>
+        <h2>Name: Ashish Mohapatra</h2>
+        <h2>Reg No: 1801227123</h2>
 
     </div>
     <script>
