--- a/4.html
+++ b/4.html
@@ -63,8 +63,8 @@
         </table>
     </div>
     <div>
-        <h2>Name: Jyoti Prakash Mohanta</h2>
-        <h2>Reg No: 1801227230</h2>
+        <h2>Name: Ashish Mohapatra</h2>
+        <h2>Reg No: 1801227123</h2>
 
     </div>
 
